--- a/css/nocom.css
+++ b/css/nocom.css
@@ -134,7 +134,7 @@ main {
 @media screen and (min-width: 1440px) { 
   .grid-cont {grid-template-columns: repeat(4, 1fr);}
 }
-.card { 
+.card1 { 
   padding: 2%; 
   display: flex; 
   flex-direction: column; 
@@ -142,13 +142,13 @@ main {
   border: 2px dashed var(--dkmid); 
   background-color: var(--light); 
 }
-.card img { 
+.card1 img { 
   width: 100%; 
   height: auto; 
   max-height: 320px; 
   border-radius: 8px 8px 0 0; 
 }
-.card button { 
+.card1 button { 
   width: 30%; 
   min-width: 6rem; 
   margin: 2rem auto; 
